--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>terrah27.github.io by terrah27</title>
+    <title>Tara Boyle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,12 +11,16 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">terrah27.github.io</h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">Tara Boyle</h1>
+      <h2 class="project-tagline">Data Science and Engineering</h2>
     </section>
 
     <section class="main-content">
-      <p>Welcome to my github page!</p>
+      <p>I’m a data scientist specializing in experimental design, 
+        machine learning, and creating beautiful visualizations. 
+        My background in pharmacy helps me understand data’s potential 
+        for improving healthcare. And, thanks to my experience in 
+        customer service, I’m great at coming up with solutions on the spot.</p>
 
       <footer class="site-footer">
 
